# cpp11_exercises

./: .gitmodules  How-to-push  NullPtr.cc  README.md  TypeTriats.cc  notes.txt  template-cc-file  type_alias.cc
cpp-11/: StaticAssert.cc  member_func_template.cc
cpp-11/timer/src/: main.cpp  timer.hpp  timer_manager.hpp
cpp-14/boost_hana/: CMakeLists.txt
cpp-14/boost_hana/src/: generic_callback.cc  generic_callback_storage_notifier.cc  test_if_a_class_has_a_member.cc  tuple_and_transform.cc
programs/: CMakeLists.txt  hello_world.cc
programs/sorting/: bubble_sort.hh  demo_sort.cc  extras.hh  selection_sort.hh
programs/watch/: test.cc
